# solcast-api-python-sdk

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish-to-pypi.yml  test.yml
aggregations/: index.html
api/client/: index.html
api/pandafiableresponse/: index.html
api/response/: index.html
docs/: index.md
docs/api/: pandafiableresponse.md
docs/notebooks/: 1.3 Getting Data - Make Concurrent Requests.ipynb  1.4 Dust Soiling - HSU (Live, Forecast, Historic).ipynb  1.5 Dust Soiling - Kimber (Live, Forecast, Historic).ipynb  2.3 Dust Soiling with Kimber.ipynb  2.4 Dust Soiling - HSU (Live, Forecast, Historic).ipynb  2.5 Dust Soiling - Kimber (Live, Forecast, Historic).ipynb  3.2 Comparing to Measurements [GHI] - Quality Controlling and Gap Filling Measurements with Solcast Actuals.ipynb
forecast/: index.html
historic/: index.html
live/: index.html
notebooks/1.1 Getting Data - Historic Solar Radiation/: index.html
notebooks/1.2 Getting Data - TMY in your local timezone/: index.html
notebooks/1.3 Getting Data - Make Concurrent Requests/: index.html
notebooks/1.4 Dust Soiling - HSU (Live, Forecast, Historic)/: 1.4 Dust Soiling - HSU (Live, Forecast, Historic).ipynb  index.html
notebooks/1.5 Dust Soiling - Kimber (Live, Forecast, Historic)/: 1.5 Dust Soiling - Kimber (Live, Forecast, Historic).ipynb  index.html
notebooks/2.1 PVLib - ModelChain with Solcast weather data/: 2.1 PVLib - ModelChain with Solcast weather data.ipynb  index.html
notebooks/2.2 PVLib - Using pvlib.iotools helper functions to get Solcast data/: index.html
notebooks/2.3 Dust Soiling with Kimber/: index.html
notebooks/2.4 Dust Soiling - HSU (Live, Forecast, Historic)/: index.html
notebooks/2.5 Dust Soiling - Kimber (Live, Forecast, Historic)/: index.html
pv_power_sites/: index.html
solcast/: __init__.py  aggregations.py  api.py  forecast.py  historic.py  live.py  urls.py
tests/: test_client.py  test_forecast.py  test_historic.py  test_live.py  test_tmy.py
tmy/: index.html
(+9 files in other folders)
