[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

[project]
name = "solcast"
description = "a simple Python SDK for the Solcast API"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/solcast/"
Documentation = "https://solcast.github.io/solcast-api-python-sdk"
Repository = "https://github.com/Solcast/solcast-api-python-sdk"

[project.optional-dependencies]
all = [
  "pandas",
  "notebook",
  "numpy",
  "matplotlib",
  "plotly",
  "kaleido",
  "folium",
  "pvlib",
  "pvanalytics",
  "scipy"
]

[tool.hatch.version]
path = "solcast/__init__.py"

[tool.mypy]
strict = true

xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true
source = ["docs", "tests", "solcast"]
context = '${CONTEXT}'

[dependency-groups]
docs = [
  "kaleido>=1.2.0",
  "mkdocs>=1.6.1",
  "mkdocs-jupyter>=0.24.8",
  "mkdocs-material>=9.7.0",
  "mkdocstrings[python]==0.26.1",
]
lint = ["black>=24.8.0", "isort>=5.13.2"]
test = ["pytest>=8.3.5", "pandas"]
